# Proppeller-Arm-Proyect

./: LICENSE  README.md
prop_arm/: CHANGELOG.md  CMakeLists.txt  package.xml
prop_arm_description/: CMakeLists.txt  package.xml
prop_arm_description/launch/: display_model.launch.py  display_rviz.launch.xml  publish_urdf.launch.py
prop_arm_description/models/prop_arm/meshes/collisions/: arm.004.stl  arm.005.stl  arm.stl
prop_arm_description/models/prop_arm/urdf/: prop_arm.urdf.xacro
prop_arm_description/rviz/: prop_arm.rviz
prop_arm_gazebo/: CMakeLists.txt  package.xml
prop_arm_gazebo/launch/: spawn_prop_arm.launch.py  spawn_prop_arm_description.launch.py  start_world.launch.py
prop_arm_gazebo/urdf/: prop_arm_materials.xacro
prop_arm_gazebo/worlds/: drone_world.sdf
prop_arm_gazebo_control/: CMakeLists.txt  angle_cli_help.txt  package.xml  prop_arm_hardware_interface_plugin.xml
prop_arm_gazebo_control/config/: arm_position_controller.yaml  ros2_controllers.yaml  ros2_controllers_motor_force.yaml
prop_arm_gazebo_control/include/prop_arm_gazebo_control/: angle_hold_controller.hpp  angle_hold_ss_controller.hpp  motor_commander.hpp  prop_arm_hardware_interface.hpp  propeller_force_controller.hpp  v_emf_publisher.hpp
prop_arm_gazebo_control/launch/: load_controller.launch.py
prop_arm_gazebo_control/src/: angle_hold_controller.cpp  angle_hold_controller_main.cpp  angle_hold_ss_controller.cpp  motor_commander.cpp  prop_arm_hardware_interface.cpp  propeller_force_controller.cpp  v_emf_publisher.cpp
prop_arm_gazebo_control/urdf/: prop_arm_control.xacro
prop_arm_gazebo_plugins/: CMakeLists.txt  package.xml
prop_arm_gazebo_plugins/urdf/: prop_arm_gazebo_plugins.xacro  prop_arm_gazebo_sensors.xacro
prop_arm_gui/: CMakeLists.txt  package.xml
prop_arm_gui/config/: gui_config.yaml
prop_arm_gui/include/prop_arm_gui/: aerospace_dashboard.hpp  aerospace_data_visualizer.hpp  chart_base.hpp  main_window.hpp  prop_arm_gui_node.hpp  real_time_plot.hpp
prop_arm_gui/launch/: display_gui.launch.py
prop_arm_gui/src/: aerospace_dashboard.cpp  aerospace_data_visualizer.cpp  chart_base.cpp  main.cpp  main_window.cpp  prop_arm_gui_node.cpp  real_time_plot.cpp
prop_arm_matlab/: funcionTransferencia.m  modeloLineal.m  modeloNoLineal.m
