<?xml version="1.0"?>
<?xml-model href="http://downloads.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!--- Initial package configuration -->
    <name>prop_arm_description</name>
    <version>0.0.1</version>
    <description>Propeller Arm Description Package</description>
    <maintainer email="ivan.oroz34@gmail.com">Nidhood</maintainer>
    <license>BSD-3-Clause</license>

    <!-- Build tool dependencies  for ament package -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Exec dependencies -->
    <exec_depend>ament_index_python</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>ros2_launch</exec_depend>

    <!-- Test dependencies -->
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <!-- Export dependencies -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>