<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeDL="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>prop_arm_gazebo_control</name>
    <version>0.0.0</version>
    <description>PropArm Gazebo Control Package</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Core ROS2 dependencies -->
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>trajectory_msgs</depend>

    <!-- Hardware interface dependencies -->
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>gz_ros2_control</depend>

    <!-- Gazebo dependencies -->
    <depend>gz-sim8</depend>
    <depend>gz-transport13</depend>
    <depend>gz-msgs10</depend>

    <!-- Linear algebra -->
    <depend>eigen3_cmake_module</depend>
    <build_depend>eigen3</build_depend>

    <!-- Testing -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gz_ros2_control plugin="${prefix}/prop_arm_hardware_interface_plugin.xml"/>
    </export>
</package>