<?xml version="1.0"?>
<?xml-model href="http://downloads.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!--- Initial package configuration -->
    <name>prop_arm_gazebo_plugins</name>
    <version>0.0.1</version>
    <description>Gazebo simulation for the Propeller Arm Project</description>
    <maintainer email="ivan.oroz34@gmail.com">Nidhood</maintainer>
    <license>BSD-3-Clause</license>

    <!-- Build tool dependencies for ament package -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Exec dependencies -->
    <exec_depend>gazebo_ros2_control</exec_depend>

    <!-- Build dependencies -->
    <build_depend>gazebo_ros2_control</build_depend>    
    <build_export_depend>gazebo_ros2_control</build_export_depend>


    <!-- Test dependencies -->
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <!-- Exported targets -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>